# VascuSynth-AI

./: .gitignore  Dockerfile  MIP_Generator.ipynb  README.md
.ipynb_checkpoints/: MIP_Generator-checkpoint.ipynb
ITKFactoryRegistration/: itkImageIOFactoryRegisterManager.h
Source/: CMakeLists.txt  MIP_Generator.ipynb  OxygenationMap.cpp  OxygenationMap.h  VascuSynth.cpp  VascularTree.cpp  VascularTree.h  generate_config_files.py  generate_mip.py  requirements.txt
Source/.ipynb_checkpoints/: MIP_Generator-checkpoint.ipynb
example/: README  imageNames.txt  p1.txt
example/image1/: tree_structure.xml
normal/: imageNames.txt  p1.txt  testOx.txt  testOx2.txt  testS.txt
normal/normal_100/: tree_structure.xml
normal/normal_1000/: tree_structure.xml
normal/normal_1000_2/: tree_structure.xml
normal/normal_1000_constant/: tree_structure.xml
normal/normal_100_constant/: tree_structure.xml
normal/normal_400/: tree_structure.xml
normal/normal_400_constant/: tree_structure.xml
normal/normal_code_testing/: tree_structure.xml
tumour/: imageNames.txt  p1.txt  testNoise.txt  testOx.txt
tumour/tumour_200/: tree_structure.xml
tumour/tumour_Maximize_Obj/: tree_structure.xml
tumour/tumour_Minimize_Obj/: tree_structure.xml
tumour/tumour_T2_2/: tree_structure.xml
tumour/tumour_T2_2/original_image/: image.xml
tumour/tumour_testing/: tree_structure.xml
