PROJECT( VascuSynth )
FIND_PACKAGE( ITK )
FIND_PACKAGE(PythonLibs REQUIRED)
IF( ITK_FOUND )
    INCLUDE( ${ITK_USE_FILE} )
ENDIF (ITK_FOUND )
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
ADD_EXECUTABLE(VascuSynth VascuSynth.cpp SupplyMap.cpp OxygenationMap.cpp NodeTable.cpp VascularTree.cpp TreeDrawer.cpp)
TARGET_LINK_LIBRARIES( VascuSynth ${ITK_LIBRARIES} ${PYTHON_LIBRARIES})
